[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/GUI/HUD_msgBox.gd" type="Script" id=1]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_M_pressed.png" type="Texture" id=4]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_M_on.png" type="Texture" id=6]
[ext_resource path="res://fonts/norwester.otf" type="DynamicFontData" id=15]
[ext_resource path="res://fonts/Lobster_1.3.otf" type="DynamicFontData" id=16]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/board_2.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 15 )
fallback/0 = ExtResource( 16 )

[sub_resource type="DynamicFont" id=3]
size = 13
use_filter = true
font_data = ExtResource( 15 )

[node name="HUD_node_msg_box" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 1029.0
margin_bottom = 605.0
color = Color( 0, 0, 0, 0.192157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg_box" type="NinePatchRect" parent="."]
margin_left = 392.0
margin_top = 224.0
margin_right = 531.0
margin_bottom = 304.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
region_rect = Rect2( 5, 5, 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_title" type="Label" parent="msg_box"]
margin_left = 44.0
margin_top = 4.0
margin_right = 137.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Warning"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_contents" type="Label" parent="msg_box"]
margin_left = 8.0
margin_top = 26.0
margin_right = 256.0
margin_bottom = 74.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.0313726, 0.0313726, 1 )
text = "{msg}"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_msgbox_close" type="TextureButton" parent="msg_box"]
margin_left = 48.0
margin_top = 56.0
margin_right = 92.0
margin_bottom = 76.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="msg_box/btn_msgbox_close"]
margin_left = 1.5
margin_top = 0.5
margin_right = 41.5
margin_bottom = 16.5
custom_fonts/font = SubResource( 3 )
text = "OK"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="button_down" from="msg_box/btn_msgbox_close" to="." method="_on_btn_msgbox_close_button_down"]
